@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.14.9
+VERSION=1.14.10
 DEPENDENCY="zeda=1.8.0;zm=1.8.0"
