@@ -1,3 +1,4 @@
+2024. 1. 5. Added zNURBS3DSliceNum, zNURBS3D1SliceNum, and zNURBS3D1SetSliceNum. [zeo_nurbs]
 2024. 1. 3. Defined zFrame3DVec. [zeo_frame3d]
 2024. 1. 3. Redefined zMat3DVec. [zeo_mat3d]
 2023.12.20. Added zAA2AngleAndAxis. [zeo_vec3d]
